# lbgs

./: README.md
3rd/x64-linux/include/: expat_config.h  ffi.h  luaconf.h  lzma.h  zconf.h
3rd/x64-windows/include/: ecpg_config.h  expat_config.h  pg_config.h  zdict.h  zstd.h  zstd_errors.h
3rd/x64-windows/lib/: Qt5AccessibilitySupport.lib  Qt5AccessibilitySupport.prl  Qt5AxBase.lib  Qt5AxBase.prl  Qt5AxContainer.lib  Qt5AxContainer.prl  Qt5AxServer.lib  Qt5AxServer.prl  Qt5Concurrent.lib  Qt5Concurrent.prl  Qt5Core.lib  Qt5Core.prl  Qt5DBus.lib  Qt5DBus.prl  Qt5Designer.lib  Qt5Designer.prl  Qt5DesignerComponents.lib  Qt5DesignerComponents.prl  Qt5DeviceDiscoverySupport.lib  Qt5DeviceDiscoverySupport.prl  Qt5EdidSupport.lib  Qt5EdidSupport.prl  Qt5EventDispatcherSupport.lib  Qt5EventDispatcherSupport.prl  Qt5FbSupport.lib  Qt5FbSupport.prl  Qt5FontDatabaseSupport.lib  Qt5FontDatabaseSupport.prl  Qt5Gui.prl  Qt5Help.lib  Qt5Help.prl  Qt5Multimedia.lib  Qt5Multimedia.prl  Qt5MultimediaQuick.lib  Qt5MultimediaQuick.prl  Qt5MultimediaWidgets.lib  (+145 more)
coding/: CMakeLists.txt  buildlbgslinux_deb.sh  buildlbgslinux_deb_Ninja.sh  buildlbgslinux_rel.sh  buildlbgslinux_rel_Ninja.sh  buildlbgswin.bat  colortexttest.bat  lbgsbuild.bat  lbgsbuild.sh  removeserver_err_nohup_log.sh  startserver.bat  startserver_linux.sh  stopserver.bat  stopserver_linux.sh  unixgen.sh  vsgen.bat
coding/cacheserver/: CMakeLists.txt  main.cpp
coding/cacheserver/msghandler/: cachemsghandler.cpp  cachemsghandler.h
coding/cacheserver/redis/: baseredis.cpp  baseredis.h  rediscluster.cpp  rediscluster.h
coding/cacheserver/src/: cacheserver.cpp  cacheserver.h  cacheserver_aid.cpp  cacheserver_aid.h
coding/dbserver/: CMakeLists.txt  main.cpp
coding/dbserver/msghandler/: dbmsghandler.cpp  dbmsghandler.h
coding/dbserver/postgresql/: basepsql.cpp  basepsql.h  psqltables.h
coding/dbserver/src/: dbmanager.cpp  dbmanager.h  dbserver.cpp  dbserver.h  dbserver_aid.cpp  dbserver_aid.h
coding/dockerscript/docker_cmd/: docker_remove.sh  mongo_goin.sh  mongo_run.sh  mysql_goin.sh  mysql_run.sh  postgres_goin.sh  postgres_run.sh  redis_goin_rediscmd.sh  redis_run.sh  redis_run_cluster.sh  redis_sentinel_monitor.sh  z_docker_run_redis_tip.txt  z_lbgs_operating_environment_install.txt
coding/dockerscript/docker_cmd/redis_cluster_conf/: redis6379.conf  redis7000.conf  redis7001.conf  redis7002.conf  redis7003.conf  redis7004.conf  redis7005.conf
coding/dockerscript/docker_cmd/redis_conf/: redis.conf  redis6380.conf  redis6381.conf  sentinel.conf
coding/gateserver/: CMakeLists.txt  main.cpp
coding/gateserver/config/: config.cpp  config.h  gateserverconfig.h
coding/gateserver/export/: export.cpp  export.h  global.h
coding/gateserver/gateservermsg/: gateservermsg.h
coding/gateserver/src/: gateserver.cpp  gateserver.h  gateserver_aid.cpp  gateserver_aid.h  user.cpp  user.h  userseqmanager.cpp  userseqmanager.h
coding/include/servercommon/: cacheserverconfig.h  commontool.h  gateserverconfig.h  minidump.h  msgtool.h  proxyserverconfig.h
coding/logicserver/: CMakeLists.txt  main.cpp
coding/logicserver/communicationmsg/: msgcreaterole.h  msgheart.h  msglogin.h  msglogout.h  msgroleinfoupdate.h
coding/logicserver/msghandler/: logicmsghandler.cpp  logicmsghandler.h
coding/logicserver/rolemanager/: role.cpp  role.h  rolemanager.cpp  rolemanager.h
coding/logicserver/src/: globallogicserver.cpp  globallogicserver.h  logicserver.cpp  logicserver.h  logicserver_aid.cpp  logicserver_aid.h
coding/proxyserver/: CMakeLists.txt  main.cpp
coding/proxyserver/config/: proxyserverconfig.cpp  proxyserverconfig.h
coding/proxyserver/export/: export.cpp  export.h  global.h
coding/proxyserver/src/: proxyserver.cpp  proxyserver.h  serverlinker.cpp  serverlinker.h
coding/servercommon/: CMakeLists.txt  basedef.h
coding/servercommon/boostcommondef/: basedef.h
coding/servercommon/boostmodule/: basedef.h  ioserverpool.cpp  ioserverpool.h  signalcommunication.h
coding/servercommon/commontool/: commontool.cpp  commontool.h
coding/servercommon/commontool/msgtool/: msgtool.cpp  msgtool.h
coding/servercommon/commontool/serializememory/: serializememory.cpp  serializememory.hpp
coding/servercommon/configmodule/: configinterface.cpp  configinterface.h  configmanager.cpp  configmanager.h
coding/servercommon/configmodule/cacheserverconfig/: cacheserverconfig.cpp  cacheserverconfig.h
coding/servercommon/configmodule/dbserverconfig/: dbserverconfig.cpp  dbserverconfig.h
coding/servercommon/configmodule/gateserverconfig/: gateserverconfig.cpp  gateserverconfig.h
coding/servercommon/configmodule/proxyserverconfig/: proxyserverconfig.cpp  proxyserverconfig.h
coding/servercommon/logmodule/: log.cpp  log.h  logdef.h
coding/servercommon/msgmodule/: gateservermsghandler.cpp  gateservermsghandler.h  innerserverheartmsg.h  msgcommondef.h  proxyservermsghandler.cpp  proxyservermsghandler.h  singletoproxymsghandler.cpp  singletoproxymsghandler.h
coding/servercommon/queuemodule/: safequeue.hpp
coding/servercommon/sysinfomodule/: sysinfo.cpp  sysinfo.h
coding/servercommon/sysinfomodule/minidump/: minidump.cpp  minidump.h
coding/servercommon/timermodule/: timer.cpp  timer.h  timer2.cpp  timer2.h
coding/simulationclient/: CMakeLists.txt  main.cpp
coding/simulationclient/src/: client.cpp  client.h  mainwidget.cpp  mainwindow.h  mainwindowobj.cpp  mainwindowobj.h
coding/simulationclient/src/connectwidget/: connectwidget.cpp  connectwidget.h  user.cpp  user.h
coding/simulationclient/src/ui/: mainwindow.ui
coding/simulationclient/src_deprecated/: mainwidget.h
coding/simulationclient/src_deprecated/connectwidget/: user.cpp  user.h
coding/test/: CMakeLists.txt  example_boost_serialization.cpp  example_concurrentqueue.cpp  example_coroutine.cpp  example_lock_free.cpp  example_psql.cpp  example_redis.cpp  example_serialization.cpp  example_timer.cpp  exampletest.cpp  main.cpp
coding/test/resource/: role.sql
coding/test/servercommon/: commontooltest.cpp  safequeuetest.cpp
config/server/: server.xml
(+1090 files in other folders)
